# localzone

./: Cargo.toml  Makefile  README.md
.github/workflows/: tests.yml
examples/: demo.rs
scripts/: make-win-mapping.py
src/: lib.rs  unix.rs  wasm32.rs  windows.rs  windows_zones.gen.rs
