[package]
name = "localzone"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
win_zones = []
auto_validation = ["chrono-tz"]

[dependencies]
chrono-tz = { version = "0.6.0", optional = true }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.28.0", features = ["Win32_Foundation", "Win32_System_Time"] }