[package]
name = "localzone"
version = "0.3.1"
edition = "2021"
authors = ["Armin Ronacher <armin.ronacher@active-4.com>"]
license = "Apache-2.0"
description = "figures out the local timezone as IANA / Olson identifier "
repository = "https://github.com/mitsuhiko/localzone"
keywords = ["timezone", "localtime", "iana", "olson"]
readme = "README.md"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
win_zones = []
auto_validation = ["chrono-tz"]

[dependencies]
chrono-tz = { version = "0.9", optional = true }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.54.0", features = ["Win32_Foundation", "Win32_System_Time"] }

[target.wasm32-unknown-unknown.dependencies]
js-sys = "0.3.69"
